--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -12,4 +12,4 @@ jobs:
           node-version: 12
       - run: yarn install
       - run: yarn prettier:check
-#      - run: yarn test
+      - run: yarn test
